Skill name misalignment issue fix, pushed bio text down

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -42,7 +42,7 @@
 }
 
 .bio {
-	margin: 0px 50px 0px 50px;
+	margin: 3rem 50px 0px 50px;
 }
 
 .custom-navbar {
@@ -459,4 +459,36 @@
             }
 
     }
+
+/* Ensure the main header name sits below the profile image */
+#header h1 {
+  margin-top: 2rem;
+}
+
+@media screen and (max-width: 736px) {
+  #header h1 {
+    margin-top: 1rem;
+  }
+}
+
+/* Skill icons: uniform box, vertically centered, bold labels */
+.skill-block .col-6.col-sm-3, .skill-block .col-6 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 150px;
+}
+
+.skill-block img {
+  width: 90px;
+  height: 90px;
+  object-fit: contain;
+  display: block;
+  margin: 0 auto;
+}
+
+.skill-block .mt-2.small {
+  font-weight: 700;
+}
 
